--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,13 @@
+node_modules
+src/**
+out/**
+vsc-extension-quickstart.md
+
 .vscode/**
 .vscode-test/**
-out/test/**
-
-src/**
 .gitignore
 .yarnrc
-vsc-extension-quickstart.md
+
 **/tsconfig.json
 **/.eslintrc.json
 **/*.map
