--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": {
     "url": "https://github.com/damiensedgwick/vscode-xstate-visualizer"
   },
-  "version": "1.1.0",
+  "version": "1.0.1",
   "engines": {
     "vscode": "^1.56.0"
   },
@@ -16,7 +16,7 @@
   "activationEvents": [
     "onCommand:xstateviz.visualizer"
   ],
-  "main": "./out/extension.js",
+  "main": "./out/main.js",
   "contributes": {
     "commands": [
       {
