--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,14 +1,6 @@
+.vscode
 node_modules
-src/**
-out/**
-vsc-extension-quickstart.md
-
-.vscode/**
-.vscode-test/**
-.gitignore
-.yarnrc
-
-**/tsconfig.json
-**/.eslintrc.json
-**/*.map
-**/*.ts
+out/
+src/
+tsconfig.json
+webpack.config.js
