--- a/package.json
+++ b/package.json
@@ -1,52 +1,47 @@
 {
-  "name": "xstateviz",
+  "name": "xstate-visualizer",
+  "version": "1.0.0",
+  "displayName": "xstate-visualizer",
+  "description": "Visualize your state machines from inside vscode.",
   "publisher": "dksedgwick",
-  "displayName": "XStateViz",
-  "description": "Visualise your state machines within vscode.",
   "icon": "images/icon.png",
   "repository": {
     "url": "https://github.com/damiensedgwick/vscode-xstate-visualizer"
   },
-  "version": "1.0.4",
   "engines": {
-    "vscode": "^1.22.0"
+    "vscode": "^1.56.0"
   },
   "categories": [
     "Other"
   ],
   "activationEvents": [
-    "onCommand:visualizer"
+    "onCommand:xstate-visualizer.helloWorld"
   ],
-  "main": "./dist/main.js",
+  "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "visualizer",
-        "title": "XState Visualizer"
+        "command": "xstate-visualizer.helloWorld",
+        "title": "Hello World"
       }
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run -S esbuild-base -- --minify",
+    "vscode:prepublish": "yarn run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
+    "pretest": "yarn run compile && yarn run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./dist/test/runTest.js",
-    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=dist/main.js --external:vscode --format=cjs --platform=node",
-    "esbuild": "npm run -S esbuild-base -- --sourcemap",
-    "esbuild-watch": "npm run -S esbuild-base -- --sourcemap --watch",
-    "test-compile": "tsc -p ./"
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/vscode": "^1.56.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.4",
     "@types/node": "^12.11.7",
-    "@types/vscode": "^1.22.0",
+    "eslint": "^7.19.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "esbuild": "^0.12.5",
-    "eslint": "^7.19.0",
     "glob": "^7.1.6",
     "mocha": "^8.2.1",
     "typescript": "^4.1.3",
