--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "displayName": "xstate-visualizer",
   "description": "Visualize your state machines from inside vscode.",
   "publisher": "dksedgwick",
+  "license": "MIT",
   "icon": "images/icon.png",
   "repository": {
     "url": "https://github.com/damiensedgwick/vscode-xstate-visualizer"
@@ -15,33 +16,38 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:xstate-visualizer.helloWorld"
+    "onCommand:xstate-visualizer.sayHello"
   ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "xstate-visualizer.helloWorld",
-        "title": "Hello World"
+        "title": "Say Hello!",
+        "command": "xstate-visualizer.sayHello"
       }
     ]
   },
   "scripts": {
-    "vscode:prepublish": "yarn run compile",
+    "esbuild": "npm run -S esbuild-base -- --sourcemap",
+    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+    "esbuild-watch": "npm run -S esbuild-base -- --sourcemap --watch",
+    "vscode:prepublish": "npm run -S esbuild-base -- --minify",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "yarn run compile && yarn run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "pretest": "yarn run compile && yarn run lint",
+    "test": "node ./out/test/runTest.js",
+    "test-compile": "tsc -p ./"
   },
   "devDependencies": {
-    "@types/vscode": "^1.56.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.4",
     "@types/node": "^12.11.7",
-    "eslint": "^7.19.0",
+    "@types/vscode": "^1.56.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "esbuild": "^0.12.5",
+    "eslint": "^7.19.0",
     "glob": "^7.1.6",
     "mocha": "^8.2.1",
     "typescript": "^4.1.3",
