--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xstate-visualizer",
+  "name": "xstviz",
   "version": "1.0.0",
   "displayName": "xstate-visualizer",
   "description": "Visualize your state machines from inside vscode.",
@@ -16,38 +16,33 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:xstate-visualizer.sayHello"
+    "onCommand:xstviz.helloWorld"
   ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "title": "Say Hello!",
-        "command": "xstate-visualizer.sayHello"
+        "command": "xstviz.helloWorld",
+        "title": "Xstate Visualizer"
       }
     ]
   },
   "scripts": {
-    "esbuild": "npm run -S esbuild-base -- --sourcemap",
-    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
-    "esbuild-watch": "npm run -S esbuild-base -- --sourcemap --watch",
-    "vscode:prepublish": "npm run -S esbuild-base -- --minify",
+    "vscode:prepublish": "yarn run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "lint": "eslint src --ext ts",
     "pretest": "yarn run compile && yarn run lint",
-    "test": "node ./out/test/runTest.js",
-    "test-compile": "tsc -p ./"
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/vscode": "^1.56.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.4",
     "@types/node": "^12.11.7",
-    "@types/vscode": "^1.56.0",
+    "eslint": "^7.19.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "esbuild": "^0.12.5",
-    "eslint": "^7.19.0",
     "glob": "^7.1.6",
     "mocha": "^8.2.1",
     "typescript": "^4.1.3",
