Working on bugfixes

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,7 +1,12 @@
-.vscode
-node_modules
-out/
-dist/
-src/
-tsconfig.json
-webpack.config.js
+.vscode/**
+.vscode-test/**
+out/test/**
+
+src/**
+.gitignore
+.yarnrc
+vsc-extension-quickstart.md
+**/tsconfig.json
+**/.eslintrc.json
+**/*.map
+**/*.ts
