WIP: build passing and content loading. Display is blank.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "rootDir": "src",
     "strict": true,
     "jsx": "react-jsx",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "moduleResolution": "Node"
   },
   "exclude": ["node_modules", ".vscode-test"]
 }
